  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

===========================================================================
MARK: released gwenhywfar-2.5.4 (2007/02/16, r1165)
===========================================================================

2007-02-16   Christian Stimming <stimming@tuhh.de>

	* src/gwenhywfarapi.h: Add common macros for DIR_SEPARATOR and
	SEARCHPATH_SEPARATOR, both as character and string. Naming is
	similar to glib convention.

2007-02-13   Christian Stimming <stimming@tuhh.de>

	* src/os/directory.h: Add GWEN_Directory_GetTmpDirectory()
	function to have a uniform method for getting a temporary
	directory, similar to g_get_tmp_dir().

2007-02-12   Christian Stimming <stimming@tuhh.de>

	* configure.ac, Makefile.am: Fix symlinking/copying generated
	header files. Necessary for win32.

===========================================================================
MARK: released gwenhywfar-2.5.3 (2007/02/09, r1150)
===========================================================================

2007-02-09   Christian Stimming <stimming@tuhh.de>

	* src/os/windows/directory.c: For GetHomeDirectory() on windows,
	really look up the user's home directory now.  (Previously this
	used the WindowsDirectory, but this is fixed now.).

2007-01-29   Christian Stimming <stimming@tuhh.de>

	* m4/binreloc.m4: Fix detection of binreloc support for
	autoconf>=2.60.

===========================================================================
MARK: released gwenhywfar-2.5.2 (2007/01/19, r1122)
===========================================================================

2007-01-17   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Simplify OS section about windows; detection of